# event-echo-clone-kit

./: .gitignore  README.md  add_book_tour.py  add_concert.py  add_football_match.py  add_papal_visit.py  add_reinterment.py  app.py  chat_processor.py  clear_duplicates.py  clear_events.py  index.html  main.py  models.py  package-lock.json  package.json  project_map.md  pyproject.toml  replit.nix  requirements.txt  routes.py
attached_assets/: Pasted--event-id-1-event-name-Truck-Festival-event-description-A-vibrant-3-da-1736881094126.txt
instance/: mydatabase.db
src/components/: EventCard.tsx  SecurityPersonnelCard.tsx  StatsCard.tsx
src/integrations/supabase/: client.ts
src/pages/: AuthPage.tsx  Dashboard.tsx  Index.tsx
static/js/: main.js  scenario_builder.js
supabase/: config.toml
templates/: access_log.html  base.html  chat.html  comparative_search.html  dashboard.html  decision_log.html  index.html  insights.html  modeling.html  report_comparison.html  scenario_builder.html  view_decision.html  view_report.html
templates/pdf/: decision_log_pdf.html  report_pdf.html
templates/templates/: create.html  list.html
uploads/: 20250103_192833_Book13.xlsx
